--- a/style.css
+++ b/style.css
@@ -10,8 +10,11 @@ header {
  font-family: cursive;
 }
 
-#survey-form {
+#description {
     color: #b8860b;
     font-size: 20px;
+}
 
+#survey-form {
+    background-color: #ffcfaa;
 }
