added styling to main form text

--- a/style.css
+++ b/style.css
@@ -6,10 +6,10 @@ body {
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   text-align: center;
   margin: 0 auto;
-  height: 0;
 }
 
 .header-text,
+.header,
 img {
   width: 100%;
 }
@@ -19,41 +19,42 @@ Header
 =========================================================== */
 
 #title {
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   text-transform: none;
-}
-
-.header {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
 }
 
 .header-img {
   opacity: 80%;
 }
 
+.header-position {
+  position: relative;
+}
+
 .header-text {
   position: absolute;
   font-size: 4vw;
   color: #fff;
-  transform: translate(-50%, -50%);
+  transform: translate(1.3%, -122.2%);
 }
 
-.header-text p {
+.header-text h {
   font-family: "Baloo Tamma 2", cursive;
   font-size: 3vw;
 }
 
-.header-position {
-  position: relative;
+.header-text p {
+  margin-top: 0;
+}
+
+.header img {
+  margin-bottom: -0.25rem;
 }
 
 h1 {
   font-family: "Lobster", cursive;
   text-transform: uppercase;
   margin-bottom: 0;
+  padding-top: 0.5rem;
 }
 
 /* ===========================================================
@@ -62,15 +63,15 @@ Main Images/Captions
 
 #title,
 #description {
-  margin-top: 0;
+  margin-top: 0.4rem;
   margin-bottom: 0;
+  padding-bottom: 0.5rem;
 }
 
 .survey-description,
 .form {
   background-color: #889890;
   color: #fff;
-  padding-top: 0.1rem;
   font-family: "Raleway Dots", cursive;
   font-size: 3vw;
 }
@@ -79,15 +80,51 @@ Main Images/Captions
 Survey Form
 =========================================================== */
 
-#survey-form {
-  background-color: #889890;
-  color: #fff;
+.form-design {
+  text-align: left;
   padding-top: 1rem;
   padding-left: 0.3rem;
+  background-color: #889890;
+  color: #fff;
 }
 
 .form-group {
-  text-align: left;
+  margin: 0 auto 0.5rem auto;
+  padding: 0.05rem;
+}
+
+.form-control,
+.input-textarea {
+  display: inline-block;
+  width: 100%;
+  height: 2.175rem;
+  padding: 0.375rem 0.75rem;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+}
+
+.input-textarea {
+  height: 6rem;
+}
+label {
+  display: flex;
+  align-items: center;
+  font-size: 0.8rem;
+  margin-bottom: 0.4rem;
+}
+
+input[type="submit"] {
+  width: 100%;
+  background-color: #fff;
+  color: #000000;
+  padding: 0.7rem;
+  margin: 1.5rem 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 /* ===========================================================
