--- a/style.css
+++ b/style.css
@@ -76,21 +76,27 @@ Main Images/Captions
   font-size: 3vw;
 }
 
+.img1 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  background-color: #fac16d;
+}
+
 /* ===========================================================
 Survey Form
 =========================================================== */
 
 .form-design {
   text-align: left;
-  padding-top: 1rem;
-  padding-left: 0.3rem;
+  /* padding-top: 1rem; */
+  /* padding-left: 0.3rem; */
   background-color: #889890;
   color: #fff;
 }
 
 .form-group {
   margin: 0 auto 0.5rem auto;
-  padding: 0.05rem;
+  /* padding: 0.05rem; */
 }
 
 .form-control,
@@ -98,7 +104,7 @@ Survey Form
   display: inline-block;
   width: 100%;
   height: 2.175rem;
-  padding: 0.375rem 0.75rem;
+  /* padding: 0.375rem 0.75rem; */
   color: #495057;
   background-color: #fff;
   background-clip: padding-box;
@@ -109,6 +115,7 @@ Survey Form
 .input-textarea {
   height: 6rem;
 }
+
 label {
   display: flex;
   align-items: center;
@@ -120,7 +127,7 @@ input[type="submit"] {
   width: 100%;
   background-color: #fff;
   color: #000000;
-  padding: 0.7rem;
+  /* padding: 0.7rem; */
   margin: 1.5rem 0;
   border: none;
   border-radius: 4px;
@@ -128,14 +135,22 @@ input[type="submit"] {
 }
 
 /* ===========================================================
-Video
+Footer
 =========================================================== */
 
-/* video {
-  width: 100%;
+.footer-style {
+  background: #fac16d;
+  color: #b45219;
+  padding-bottom: 0.02rem;
+  font-family: "Lobster", cursive;
+  text-transform: uppercase;
 }
 
 .video {
   height: 330px;
   width: 350px;
-} */
+}
+
+video {
+  width: 100%;
+}
