--- a/style.css
+++ b/style.css
@@ -77,8 +77,8 @@ Main Images/Captions
 }
 
 .img1 {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
   background-color: #fac16d;
 }
 
@@ -104,7 +104,7 @@ Survey Form
   display: inline-block;
   width: 100%;
   height: 2.175rem;
-  /* padding: 0.375rem 0.75rem; */
+  padding: 0 0.75rem;
   color: #495057;
   background-color: #fff;
   background-clip: padding-box;
@@ -114,6 +114,8 @@ Survey Form
 
 .input-textarea {
   height: 6rem;
+  margin-top: 1rem;
+  margin-bottom: 0;
 }
 
 label {
@@ -127,8 +129,8 @@ input[type="submit"] {
   width: 100%;
   background-color: #fff;
   color: #000000;
-  /* padding: 0.7rem; */
-  margin: 1.5rem 0;
+  padding: 0.7rem;
+  margin-bottom: 0.3rem;
   border: none;
   border-radius: 4px;
   cursor: pointer;
@@ -140,7 +142,7 @@ Footer
 
 .footer-style {
   background: #fac16d;
-  color: #b45219;
+  color: #59301b;
   padding-bottom: 0.02rem;
   font-family: "Lobster", cursive;
   text-transform: uppercase;
