--- a/style.css
+++ b/style.css
@@ -88,15 +88,16 @@ Survey Form
 
 .form-design {
   text-align: left;
-  /* padding-top: 1rem; */
-  /* padding-left: 0.3rem; */
   background-color: #889890;
   color: #fff;
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 1.1rem;
 }
 
 .form-group {
   margin: 0 auto 0.5rem auto;
-  /* padding: 0.05rem; */
+  padding: 0.05rem;
 }
 
 .form-control,
@@ -104,7 +105,6 @@ Survey Form
   display: inline-block;
   width: 100%;
   height: 2.175rem;
-  padding: 0 0.75rem;
   color: #495057;
   background-color: #fff;
   background-clip: padding-box;
@@ -120,7 +120,7 @@ Survey Form
 
 label {
   display: flex;
-  align-items: center;
+  align-items: left;
   font-size: 0.8rem;
   margin-bottom: 0.4rem;
 }
