--- a/style.css
+++ b/style.css
@@ -167,6 +167,12 @@ Media Query
     justify-content: center;
   }
 
+  header,
+  main,
+  footer {
+    max-width: 1440px;
+  }
+
   label {
     font-size: 1rem;
     margin-bottom: 0.4rem;
