--- a/style.css
+++ b/style.css
@@ -148,11 +148,6 @@ Footer
   text-transform: uppercase;
 }
 
-.video {
-  height: 330px;
-  width: 350px;
-}
-
 video {
   width: 100%;
 }
@@ -162,9 +157,22 @@ Media Query
 =========================================================== */
 
 @media (min-width: 576px) {
+  .header-text {
+    transform: translate(1.3%, -103.5%);
+  }
+
   .form-design {
     display: flex;
     justify-content: center;
+  }
+
+  .img2,
+  .img3 {
+    margin: 3rem;
+  }
+
+  .survey-description {
+    font-size: 2.5vw;
   }
 
   header,
@@ -178,3 +186,37 @@ Media Query
     margin-bottom: 0.4rem;
   }
 }
+
+/* @media (min-width: 700px) {
+  #title,
+  #description {
+    padding: 1rem 4rem 0;
+  }
+
+  .img1,
+  .img3 {
+    padding: 3rem;
+  }
+
+  .img3 {
+    margin: 0 2rem;
+  }
+
+  .survey-description,
+  .form-design,
+  .footer-style {
+    max-width: 720px;
+    padding: 0;
+    margin: 0 auto;
+    background: #889890;
+  } 
+
+  .footer-style {
+    padding: 2rem 6rem 1rem 6rem;
+    background: #fac16d;
+  }
+
+  label {
+    font-size: 2.5vw;
+  }
+} */
