--- a/style.css
+++ b/style.css
@@ -86,10 +86,13 @@ Main Images/Captions
 Survey Form
 =========================================================== */
 
+.survey-description {
+  color: #fff;
+}
+
 .form-design {
   text-align: left;
   background-color: #889890;
-  color: #fff;
   max-width: 100%;
   margin: 0 auto;
   padding: 1.1rem;
