--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ Survey Form
 
 .survey-description {
   color: #fff;
-  font: solid;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
 .form-design {
