--- a/style.css
+++ b/style.css
@@ -161,28 +161,40 @@ Media Query
 =========================================================== */
 
 @media (min-width: 576px) {
-  .header-text {
-    transform: translate(1.3%, -103.5%);
-  }
-
-  .form-design {
-    display: flex;
-    justify-content: center;
-  }
-
+  #description,
   .img2,
   .img3 {
     margin: 3rem;
+  }
+
+  .header-text {
+    font-size: 3.5vw;
+    transform: translate(1.3%, -103.5%);
+  }
+
+  .survey-description,
+  .form-design,
+  .img1,
+  .img2,
+  footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 
   .survey-description {
     font-size: 2.5vw;
   }
 
+  .footer-style {
+    padding: 2rem;
+  }
+
   header,
   main,
   footer {
-    max-width: 1440px;
+    max-width: 982px;
+    margin: 0 auto;
   }
 
   label {
@@ -190,37 +202,3 @@ Media Query
     margin-bottom: 0.4rem;
   }
 }
-
-/* @media (min-width: 700px) {
-  #title,
-  #description {
-    padding: 1rem 4rem 0;
-  }
-
-  .img1,
-  .img3 {
-    padding: 3rem;
-  }
-
-  .img3 {
-    margin: 0 2rem;
-  }
-
-  .survey-description,
-  .form-design,
-  .footer-style {
-    max-width: 720px;
-    padding: 0;
-    margin: 0 auto;
-    background: #889890;
-  } 
-
-  .footer-style {
-    padding: 2rem 6rem 1rem 6rem;
-    background: #fac16d;
-  }
-
-  label {
-    font-size: 2.5vw;
-  }
-} */
