--- a/style.css
+++ b/style.css
@@ -54,14 +54,13 @@ header {
 Main Images/Captions
 =========================================================== */
 
-#title,
-#description {
+.survey-purpose p h1 {
   margin-top: 0.4rem;
   margin-bottom: 0;
   padding-bottom: 0.5rem;
 }
 
-.survey-description,
+.survey-purpose,
 .form {
   background-color: #889890;
   color: #fff;
@@ -70,9 +69,8 @@ Main Images/Captions
   text-transform: none;
 }
 
-.img1 {
+.coffee-facts {
   padding-top: 2rem;
-  padding-bottom: 2rem;
   background-color: #fac16d;
 }
 
@@ -80,20 +78,19 @@ Main Images/Captions
 Survey Form
 =========================================================== */
 
-#description {
-  margin: 0 1.2rem;
-}
-
 #submit:hover,
 a:hover {
   background-color: #495057;
 }
 
-.survey-description {
+.survey-purpose {
   color: #fff;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
+.survey-purpose p {
+  margin: 0 1.2rem;
+}
 .form-design {
   text-align: left;
   background-color: #889890;
@@ -168,9 +165,8 @@ Media Query
 =========================================================== */
 
 @media (min-width: 576px) {
-  #description,
-  .img2,
-  .img3 {
+  .coffee-facts,
+  .survey-purpose img p {
     margin: 3rem;
   }
 
@@ -179,17 +175,7 @@ Media Query
     transform: translate(1.3%, -103.5%);
   }
 
-  .survey-description,
-  .form-design,
-  .img1,
-  .img2,
-  footer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-
-  .survey-description {
+  .survey-purpose {
     font-size: 1.2rem;
   }
 
