--- a/style.css
+++ b/style.css
@@ -31,7 +31,10 @@ Header
   position: absolute;
   font-size: 0.7rem;
   color: #fff;
-  transform: translate(11.3%, -105.2%);
+  top: 85%;
+  left: 50%;
+  transform: translate(-50%, -85%);
+  width: 100%;
 }
 
 .header-text h {
@@ -72,6 +75,7 @@ Main Images/Captions
 .coffee-facts {
   padding-top: 2rem;
   background-color: #fac16d;
+  margin-top: 0;
 }
 
 /* ===========================================================
@@ -88,6 +92,9 @@ a:hover {
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
+.survey-purpose > h1 {
+  margin-top: 0;
+}
 .survey-purpose p {
   margin: 0 1.2rem;
 }
@@ -120,6 +127,10 @@ a:hover {
   height: 6rem;
   margin-top: 1rem;
   margin-bottom: 0;
+}
+
+.cups {
+  margin-right: 0.5rem;
 }
 
 label {
@@ -172,7 +183,6 @@ Media Query
 
   .header-text {
     font-size: 1.3rem;
-    transform: translate(1.3%, -103.5%);
   }
 
   .survey-purpose {
